# mix_human_voice_agents

./: .gitignore  README.md  TASKS.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/cli/: create_blend.py  generate_voice.py  handoff.py  import_voice.py  launch_artifacts.py  launch_readiness.py  prune_launch_artifacts.py  run_launch_sequence.py  verify_agent_provider.py  verify_qwen_runtime.py
backend/app/core/: agent.py  audio.py  blends.py  consent.py  generation.py  launch.py  launch_manifest.py  qwen_profiles.py  qwen_runtime.py  reference_text.py  safety.py  storage.py
backend/app/models/: schemas.py
backend/app/tts/: base.py  local_wav.py  qwen.py
backend/tests/: test_agent_provider.py  test_blends.py  test_consent.py  test_create_blend_cli.py  test_generate_voice_cli.py  test_generation.py  test_handoff_cli.py  test_import_voice_cli.py  test_launch_artifacts_cli.py  test_launch_readiness_cli.py  test_launch_readiness_core.py  test_prune_launch_artifacts_cli.py  test_qwen_adapter.py  test_qwen_profiles.py  test_routes.py  test_run_launch_sequence_cli.py  test_storage.py  test_verify_agent_provider.py  test_verify_qwen_runtime.py
docs/: launch-checklist.md  qwen-runtime-verification.md  research-review.md
docs/superpowers/plans/: 2026-05-22-mixed-voice-agent-mvp.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  devServerConfig.ts  styles.css  types.ts
frontend/tests/: App.test.tsx  viteConfig.test.ts
(+10 files in other folders)
