[project]
name = "mixed-voice-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

