[project]
name = "mixed-voice-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "numpy>=2.0.0",
  "soundfile>=0.12.1",
  "pytest>=8.0"
]
qwen = [
  "numpy>=2.0.0",
  "qwen-tts>=0.1.0",
  "soundfile>=0.12.1",
  "torch>=2.4.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
